test/testData/parser/negative/illegalPrimitveTypes.err
test/testData/parser/negative/illegalPrimitveTypes.c:12:2: error: 'short char' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:13:3: error: 'short float' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:14:4: error: 'short double' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:12:5: error: 'short void' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:11:7: error: 'long char' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:12:8: error: 'long float' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:18:9: error: 'long long double' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:22:11: error: 'long double' cannot be signed or unsigned
test/testData/parser/negative/illegalPrimitveTypes.c:20:12: error: 'long double' cannot be signed or unsigned
test/testData/parser/negative/illegalPrimitveTypes.c:16:14: error: 'float' cannot be signed or unsigned
test/testData/parser/negative/illegalPrimitveTypes.c:17:15: error: 'double' cannot be signed or unsigned
test/testData/parser/negative/illegalPrimitveTypes.c:15:16: error: 'void' cannot be signed or unsigned
